<resources>
    <string name="app_name">Çelebi Seyahat</string>
    <string name="celebiSeyehat">Çelebi Seyahat</string>
    <string name="biletTatilSistemi">Bilet-Tatil Sistemi</string>
    <string name="biletSat">Bilet Sat</string>
    <string name="otelRezervasyonuYap">Otel Rezervasyonu Yap</string>
    <string name="musteriBilgileriniGoruntule">Müşteri Bilgilerini Görüntüle</string>
    <string name="seferBilgileriniGoruntule">Sefer Bilgilerini Görüntüle</string>
    <string name="otelBilgileriniGoruntule">Otel Bilgilerini Görüntüle</string>
    <string name="isim">İsim</string>
    <string name="soyisim">Soyisim</string>
    <string name="kimlikNo">Kimlik No</string>
    <string name="telefonNo">Telefon No</string>
    <string name="ulasimFirmasi">Ulaşım Firması</string>
    <string name="istanbul">İstanbul</string>
    <string name="ankara">Ankara</string>
    <string name="izmir">İzmir</string>
    <string name="saat10">10.00</string>
    <string name="saat23">23.00</string>
    <string name="onayla">Onayla</string>
    <string name="koltukNo">Koltuk Numarası</string>
    <string name="nakit">Nakit</string>
    <string name="krediKarti">Kredi Kartı</string>
    <string name="cek">Çek</string>
    <string name="kisiSayisi">Kişi Sayısı</string>
    <string name="bir">1</string>
    <string name="iki">2</string>
    <string name="uc">3</string>
    <string name="odemeYap">Ödeme Yap</string>
    <string name="puanKullan">Puan Kullanarak Ödeme Yap</string>
    <string name="girisTarihi">Giriş Tarihi</string>
    <string name="cikisTarihi">Çıkış Tarihi</string>
    <string name="bolgeSec">Gidilmek istenen bölgeyi seçiniz.</string>
    <string name="antalya">Antalya</string>
    <string name="marmaris">Marmaris</string>
    <string name="kemer">Kemer</string>
    <string name="kusadasi">Kuşadası</string>
    <string name="side">Side</string>
    <string name="ayvalik">Ayvalık</string>
    <string name="otelFiltrele">Otel Filtrele</string>
    <string name="bolge">Bölge</string>
    <string name="tl">TL</string>
    <string name="ulasimFirmasiSec">Ulaşım firması seçiniz.</string>
    <string name="ytur">YTUR</string>
    <string name="ucanTurkOzelHavaYolu">Uçan Türk Özel Hava Yolu</string>
    <string name="ucanTurk">Uçan Türk</string>
    <string name="devletDemirYollari">Devlet Demir Yolları</string>
    <string name="kalkisTarihi">Kalkış Tarihi</string>
    <string name="kalkisSaati">Kalkış Saati</string>
    <string name="kalkisZamani">Kalkış Zamanı</string>
    <string name="varisZamani">Varış Zamanı</string>
    <string name="kalkisYeri">Kalkış Yeri</string>
    <string name="varisYeri">Varış Yeri</string>
    <string name="seferNo">Sefer No</string>
    <string name="fiyat">Fiyat</string>
    <string name="kapasite">Kapasite</string>
    <string name="bosKoltukSayisi">Boş Koltuk Sayısı</string>
    <string name="ulasimTipi">Ulaşım Tipi</string>
    <string name="puan">Puan</string>
    <string name="anasayfa">Anasayfa</string>
    <string name="odano">Oda No</string>
    <string name="rezervasyonListele">Rezervasyon Listele</string>
    <string name="bosYerSayisi">Boş Yer Sayısı</string>
    <string name="yildizSayisi">Yıldız Sayısı</string>
    <string name="kabulTarihiBaslangıc">Kabul Tarihi Başlangıcı</string>
    <string name="kabulTarihiBitisi">Kabul Tarihi Bitişi</string>
    <string name="rezervasyonSil">Rezervasyon Sil</string>
    <string name="otelAdi">Otel Adı</string>
    <string name="guncelle">Güncelle</string>
    <string name="otelpuanıguncelle">Otel Puanı Güncelle</string>

</resources>
